--- a/app/assets/javascripts/Templates/myModalProduct.html
+++ b/app/assets/javascripts/Templates/myModalProduct.html
@@ -6,7 +6,7 @@
 <form ng-submit="submit()" novalidate>
   <div class="modal-body" id="modal-body">
     <uib-tabset active="active">
-      <uib-tab index="0" heading="Products">
+      <uib-tab index="0" heading="REGISTER PRODUCTS">
         <br/>
         <table class="table" ng-if="nbproduit > 0">
             <thead>
@@ -32,28 +32,31 @@
         <br/>
         <ng-form name="nestedForm" ng-show="visible" ng-trim="false">
             <div class="form-inline">
+                <div class="form-group">
+                  <label class="control-label sr-only" id="InputDiscontinued">discontinued</label>
+                  <input type="checkbox" class="form-control" placeholder="Discontinued" required ng-model="fruit.discontinued" name="produitdiscontinued" />
+                </div>
                 <div class="form-group mb-2">
                     <label class="control-label sr-only" id="InputName">Name</label>
-                    <input type="text" class="form-control" placeholder="nom produit" required ng-model="fruit.name" name="produitname" uib-typeahead="option.produit for option in fruits | filter:$viewValue | limitTo:8">
+                    <input type="text" class="form-control" placeholder="Product" required ng-model="fruit.name" name="produitname" uib-typeahead="option.produit for option in fruits | filter:$viewValue | limitTo:8">
                 </div>
                 <div class="form-group">
-                    <label class="control-label sr-only" id="InputPrice">Prix</label>
-                    <input type="number" class="form-control" placeholder="Prix" required ng-model="fruit.prix" name="produitprix" />
+                    <label class="control-label sr-only" id="InputPrice">Price</label>
+                    <input type="number" class="form-control" placeholder="Price" required ng-model="fruit.prix" name="produitprix" />
                 </div>
                 <div class="form-group">
-                    <label class="control-label sr-only" id="InputQuantityPerUnit">Quantite</label>
-                    <input type="text" class="form-control" placeholder="Quantite per Unit" required ng-model="fruit.quantite" name="produitquantite" numeric-only/>
+                    <label class="control-label sr-only" id="InputQuantityPerUnit">Quantity</label>
+                    <input type="text" class="form-control" placeholder="Quantity per Unit" required ng-model="fruit.quantite" name="produitquantite" numeric-only/>
                 </div>
                 <div class="form-group">
                     <label class="control-label sr-only" id="InputUnitInStock">Stock</label>
                     <input type="number" class="form-control" placeholder="Unit in Stock" required ng-model="fruit.stock" name="produitstock" />
                 </div>
                 <div class="form-group">
-                    <label class="control-label sr-only" id="InputDiscontinued">discontinued</label>
-                    <input type="checkbox" class="form-control" placeholder="Discontinued" required ng-model="fruit.discontinued" name="produitdiscontinued" />
-                </div>
-                <div class="form-group">
-                    <input type="button" ng-click="newProduit(fruit)" class="btn btn-primary mb-2" value="Save" />
+                    <!--<input type="button" ng-click="newProduit(fruit)" class="btn btn-default btn-sm" value="Save" /> -->
+                    <button type="button" ng-click="newProduit(fruit)" class="btn btn-default btn-sm">
+                      <span class="glyphicon glyphicon-ok"></span>
+                    </button> 
                 </div>
             </div>
         </ng-form>
@@ -65,9 +68,6 @@
           <canvas id="line" width="500px" height="300px" class="chart chart-line" chart-data="data" chart-labels="labels" chart-series="series" chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick"></canvas>
         </div>
         <br/>
-        <div ng-hide="SeeGraph" class="col-auto">
-            <button type="button" class="btn" ng-click="visible = true"><i class="icon-plus"></i>Add</button>
-        </div>
       </uib-tab>
       <uib-tab index="1" heading="Orders" ng-if="nb_order > 0">
         <div>
@@ -119,7 +119,8 @@
     </uib-tabset>
   </div>
   <div class="modal-footer">
+    <button type="button" class="btn" ng-click="visible = true" ng-hide="SeeGraph"><i class="glyphicon glyphicon-plus"></i>Add product</button>
     <button type="button" class="btn btn-warning" ng-click="cancel()">Cancel</button>
-    <button type="submit" class="btn primary-btn">Valider</button>
+    <button type="submit" class="btn btn-success">Submit</button>
   </div>
 </form>
