--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -54,8 +54,9 @@ html, body {
       display: block;
       margin-bottom: -1px;
       color: #c7eaf9;
-      -webkit-transition: all 0.3s ease;
-      -moz-transition: all 0.3s ease;
+      /*-webkit-transition: all 0.3s ease;
+      -moz-transition: all 0.3s ease;*/
+      transition: all 0.3s ease;
       &:hover {
         font-weight: normal;
         background: #20272c;
@@ -111,6 +112,7 @@ html, body {
 .container-fluid {
   padding-left: 0;
   padding-right: 0;
+  margin-bottom: 10px;
 }
 
 #map {
@@ -191,11 +193,13 @@ html, body {
 /*tweets*/
 
 .tweets span, .news_user_info span {
-  background: #1B1B1B;
+  /*background: #1B1B1B;*/
+  background: #42AEEC;
   padding: 8px;
   border-radius: 5px;
   font-style: italic;
-  color: #4D4D4D;
+  color: #0a0a0a;
+  /*color: #4D4D4D;*/
   display: block;
 }
 
@@ -263,8 +267,9 @@ html, body {
   margin-left: 50px;
   min-height: 100%;
   box-shadow: 1px 0px 10px rgba(0, 0, 0, 0.28);
-  background: #ffffff;
-  margin-bottom: 0px;
+  /*background: #ffffff;*/
+  background: #f9f9f9;
+  margin-bottom: 10px;
 }
 
 .general_menu .avatar {
@@ -667,9 +672,11 @@ h5.cat {
     margin-left: 710px;
     margin-top: -10px;
     z-index: 9;
+    /*
     -moz-transition: all 0.3s linear;
     -o-transition: all 0.3s linear;
-    -webkit-transition: all 0.3s linear;
+    -webkit-transition: all 0.3s linear;*/
+    transition: all 0.3s linear;
 }
 
 .close_span {
@@ -678,9 +685,11 @@ h5.cat {
     margin-left: 760px;
     margin-top: -10px;
     z-index: 9;
+    /*
     -moz-transition: all 0.3s linear;
     -o-transition: all 0.3s linear;
-    -webkit-transition: all 0.3s linear;
+    -webkit-transition: all 0.3s linear;*/
+    transition: all 0.3s linear;
 }
 .close-profile-link {
     background: url(asset-path('open_profile_link.png'));
@@ -693,7 +702,8 @@ h5.cat {
 }
 
 .profile {
-    background: #364047;
+    /*background: #364047;*/
+    background: #f5f5f5;
     min-height: 100%;
     max-width: 790px;
     z-index: 8;
@@ -722,7 +732,8 @@ h5.cat {
 		h2 {
 			font-size: 18px;
 			font-weight: 500;
-			color: #ffffff;
+      color: #0a0a0a;
+			/*color: #ffffff;*/
 		}
 		div {
 			padding-left: 67px;
@@ -757,15 +768,17 @@ h5.cat {
 		}
 	}
 	h2 {
-		color: #ffffff;
+		color: #0a0a0a;
 		font-size: 16px;
 	}
 }
 
 .profile {
+  /*
     -moz-transition: all 0.3s linear;
     -o-transition: all 0.3s linear;
-    -webkit-transition: all 0.3s linear;
+    -webkit-transition: all 0.3s linear;*/
+    transition: all 0.3s linear;
 }
 
 .gallery-wrap .img-big-wrap img {
@@ -846,4 +859,12 @@ h5.cat {
 
 .card-product .price-old {
     color: #999;
+}
+
+.nav-tabs {
+  li.active {
+    a {
+      background-color: #f5f5f5;
+    }
+  }
 }
