--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title><%= full_title(yield(:title)) %></title>
     <%= stylesheet_link_tag    "https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.css" %>
+    <%= stylesheet_link_tag    "https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css" %>
     <%= stylesheet_link_tag    'application', media: 'all', "data-turbolinks-track" => "reload"  %>
     <%= javascript_include_tag 'application', "data-turbolinks-track" => "reload" %>
     <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js" %>
