--- a/app/assets/javascripts/Templates/main.html
+++ b/app/assets/javascripts/Templates/main.html
@@ -8,7 +8,7 @@
     <!--
 	<leaflet id="map"></leaflet>
 	-->
-	<div id="map" style="width:100%; height:100%"></div>
+	<div id="map" style="width:100%; height:100%; left: 50px"></div>
 </div>
 
 
