--- a/app/assets/javascripts/Templates/myModalOrder.html.erb
+++ b/app/assets/javascripts/Templates/myModalOrder.html.erb
@@ -1,6 +1,7 @@
 <div class="modal-header">
 	<!--<h3 class="modal-title" id="modal-title">PRODUCTS</h3>-->
-	<div class="pull-right">
+	<!-- <div class="pull-right"> -->
+	<div>
 		<ngcart-summary ng-if="nbproduit > 0"></ngcart-summary>
 	</div>
 </div>
